# to-duckdb

./: .gitignore  Makefile  mongodb_to_duckdb_migration.md  pyproject.toml  sqlite_duckdb_motherduck_gui_v2.md
src/xlsx_loader/: __init__.py  cli.py
